# Neura-TN

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  app.py  chess_engine.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  temp_all_fixes.js  temp_complete_fixes.js  temp_innovation.js  temp_speciation_improvements.js  train.py
.github/workflows/: docker-build.yml
static/: app.js  index.html  landing.css  neat-viz-improved.js  neat.js  style.css
static/car/: app.js  index.html  style.css
static/chess/: app.js  index.html  style.css
static/cours/cnn/: app.js  index.html  style.css
static/cours/neat/: app.js  app.js.backup  index.html  style.css
static/cours/nn/: app.js  index.html  style.css
static/flappy/: app.js  index.html  style.css
static/mnist/: app.js  index.html  style.css
