[project]
name = "mnist-visualizer"
version = "0.1.0"
description = "MNIST Neural Network & CNN Visualizer"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "flask>=3.1",
    "numpy>=2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
